[package]
name = "tpoll-count-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = { version = "0.26" }
log = { version = "0.4" }
simple_logger = { version = "4.2.0" }
regex = { version = "1.9.1" }
